<resources>
    <string name="app_name">GigVid</string>

    <!-- Common Strings -->
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- Login Fragment -->
    <string name="enter_your_credentials_below">Enter your credentials below</string>
    <string name="username_email">Username/Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <!-- Sign-up Fragment -->
    <string name="create_an_account">Create an account</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_home_screen">MainActivity</string>

    <!-- home activity -->
    <string name="title_home">Home</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_hostevent">Host Gig</string>
    <string name="title_mygig">My Gig</string>
    <string name="title_profile">Profile</string>

    <!-- Top Menu Bar -->
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="gig_image">Gig Image</string>
    <string name="buy">Buy</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_genre">Event Genre</string>
    <string name="price">Price</string>
    <string name="host_gig">Host Gig</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="duration_in_hrs">Duration (in Hrs)</string>
    <string name="my_profile">My Profile</string>
    <string name="add_bank">Add Bank</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="bank_account_details">Bank Account Details:</string>
    <string name="profile_details">Profile Details:</string>
    <string name="enter_name">Name</string>
    <string name="enter_new_mail_id">Mail-ID</string>
    <string name="registered_gigs">Registered Gigs:</string>
    <string name="my_gigs">My Gigs</string>
    <string name="my_tickets">My Tickets</string>
    <string name="join">Join</string>
    <string name="start">Start</string>
    <string name="retry">Retry</string>
    <string name="enter_username">Enter Username</string>
    <string name="payout_feature_is_coming_soon">Payout feature is coming soon...</string>
</resources>