<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.gigvid.view.homescreen.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.android.gigvid.view.homescreen.fragment.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" >
    </fragment>

    <fragment
        android:id="@+id/navigation_host_gig"
        android:name="com.android.gigvid.view.homescreen.fragment.HostGigFragment"
        android:label="@string/title_hostevent"
        tools:layout="@layout/fragment_hostgig" >
    </fragment>

    <fragment
        android:id="@+id/navigation_my_gig"
        android:name="com.android.gigvid.view.homescreen.fragment.MyGigFragment"
        android:label="@string/title_mygig"
        tools:layout="@layout/fragment_mygig">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.android.gigvid.view.homescreen.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>