<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.homescreen.fragment.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_8"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.2"
        android:src="@drawable/ic_man"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profile_details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:paddingStart="@dimen/dp_4"
        android:textAlignment="textStart"
        android:text="@string/profile_details"
        android:textSize="@dimen/dp_20"
        style="@style/TextViewHeaderTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintBottom_toTopOf="@id/user_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:startIconDrawable="@drawable/ic_person_24"
        android:hint="@string/enter_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_details_header"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:singleLine="true"
        android:textSize="@dimen/dp_16"
        android:fontFamily="@font/roboto_light"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:startIconDrawable="@drawable/ic_email_24"
        android:hint="@string/enter_new_mail_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/dp_16"
            android:fontFamily="@font/roboto_light"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bank_details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:paddingStart="@dimen/dp_4"
        android:textAlignment="textStart"
        android:text="@string/bank_account_details"
        android:textSize="@dimen/dp_20"
        style="@style/TextViewHeaderTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bank_user_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bank_user_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:startIconDrawable="@drawable/ic_person_24"
        android:hint="@string/enter_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_bank_account_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/dp_16"
            android:fontFamily="@font/roboto_light"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_bank_account_number"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:startIconDrawable="@drawable/ic_baseline_format_list_numbered_24"
        android:hint="@string/enter_account_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_bank_ifsc_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/dp_16"
            android:fontFamily="@font/roboto_light"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_bank_ifsc_code"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:startIconDrawable="@drawable/ic_baseline_code_24"
        android:hint="@string/enter_ifsc_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_bank_button"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/dp_16"
            android:fontFamily="@font/roboto_light"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_bank_button"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_16"
        android:fontFamily="@font/roboto"
        android:text="@string/add_bank"
        android:textSize="@dimen/dp_16"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_bank"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>